erpnext/ipbased-erpaccess-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipbased-erpaccess-ingress
  namespace: erpnext
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: "erp.localtest.me"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "tmg.quickzpro.com"
    secretName: erpnext-tls-cert
  rules:
  - host: "tmg.quickzpro.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frappe-bench-erpnext
            port:
              number: 8080
